<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/converterLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conversion"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <RadioGroup
        android:id="@+id/converterRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:checkedButton="@id/milesToKM"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/converterLabel"
        app:layout_constraintTop_toBottomOf="@+id/converterLabel">

        <RadioButton
            android:id="@+id/milesToKM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/miles_to_kilometers"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/kmToMiles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/kilometers_to_miles"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RadioGroup>

    <TextView
        android:id="@+id/conversionFromLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/miles_value"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/converterLabel"
        app:layout_constraintTop_toBottomOf="@+id/converterRadioGroup" />

    <EditText
        android:id="@+id/conversionFromEditText"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/conversion_from_default"
        android:importantForAutofill="no"
        android:inputType="numberSigned|numberDecimal"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/conversionFromLabel"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/conversionFromLabel" />

    <Button
        android:id="@+id/btnConvert"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#000000"
        android:onClick="convert"
        android:text="@string/convert"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/conversionFromLabel"
        app:layout_constraintTop_toBottomOf="@+id/conversionFromEditText" />

    <TextView
        android:id="@+id/conversionToLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/kilometers_value"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnConvert"
        app:layout_constraintTop_toBottomOf="@+id/btnConvert" />

    <EditText
        android:id="@+id/conversionToEditText"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:focusable="false"
        android:hint="@string/conversion_to_default"
        android:importantForAutofill="no"
        android:inputType="numberSigned|numberDecimal"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/conversionToLabel"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/conversionToLabel" />

    <TextView
        android:id="@+id/conversionHistoryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/conversion_history"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/conversionToLabel"
        app:layout_constraintTop_toBottomOf="@+id/conversionToLabel" />

    <TextView
        android:id="@+id/conversionHistory"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:gravity="start|top"
        android:paddingLeft="5sp"
        android:paddingTop="5sp"
        android:paddingRight="5sp"
        android:scrollbars="vertical"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/conversionHistoryLabel" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#000000"
        android:onClick="clearConversionHistory"
        android:text="@string/clear"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/conversionHistory" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="14dp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="392dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>